--- a/game/templates/game/user_invite_confirm.html
+++ b/game/templates/game/user_invite_confirm.html
@@ -18,12 +18,12 @@
                     </tbody>
                 </table>
             </div>
-            <div class="action-buttons mt-2">
-                <form method="post" style="display: inline;">
+            <div class="action-buttons mt-2" style="align-items: stretch;">
+                <form method="post" style="display: flex; flex: 1; max-width: 200px;">
                     {% csrf_token %}
-                    <button class="rpg-btn btn-primary" type="submit">Yes, invite them</button>
+                    <button class="rpg-btn btn-primary" type="submit" style="width: 100%; box-sizing: border-box;">Yes, invite them</button>
                 </form>
-                <a href="{{ game.get_absolute_url }}" class="rpg-btn btn-defend">No, go back</a>
+                <a href="{{ game.get_absolute_url }}" class="rpg-btn btn-defend" style="flex: 1; max-width: 200px; text-align: center; display: flex; align-items: center; justify-content: center; box-sizing: border-box;">No, go back</a>
             </div>
         </div>
     </div>
